# PN5180-Dumper

./: .gitignore  DumpInfo.ino  README.md  capture_dump.py  pyproject.toml  readme.txt  requirements-qt.txt  run_capture_once.bat
docs/: ARCHITECTURE.md  ROADMAP.md  SERIAL_PROTOCOL.md
firmware/pn5180_dumper/: pn5180_dumper.ino
host/python/pn5180_dumper/: __init__.py  capture.py  cli.py  keys.py  qt_app.py
host/python/pn5180_dumper/data/: mifare_classic_keys.json
scripts/: build_python_qt_release.ps1  run_capture_once.bat  run_qt_app.bat  write_mfc_test_trailers.py
tests/: test_capture.py  test_keys.py
